--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
-URL='http://localhost/'
+URL='http://127.0.0.1'
 
 # Database connection
 DB_HOST='localhost'
-DB_NAME=''
+DB_NAME='canaryaac'
 DB_USER='root'
 DB_PASS=''
 DB_PORT='3306'
