Improvements and Fixes
Added last kills page
Session improvements
Added box to accept cookies (GDPR - General Data Protection Regulation)
Removed market page in admin panel
Improvements to the bans page in the admin panel
Added signature (localhost/signature/{player_id}
Added banned account system
Payment system redirection fixes
Redirection fix if user has no role
Online character page fixes
Added button with discord link
Page cache fix
Created themebox separation

--- a/.env
+++ b/.env
@@ -10,7 +10,7 @@ DB_PORT='3306'
 
 # Website configs
 MAINTENANCE=false
-DEV_MODE=false #cache and debug
+DEV_MODE=true
 
 # PagSeguro
 PAGSEGURO_EMAIL=''
