limiting installment not working on pagseguro php sdk

--- a/.env
+++ b/.env
@@ -21,6 +21,7 @@ MERCADOPAGO_TOKEN=''
 MERCADOPAGO_KEY=''
 MERCADOPAGO_CLIENTID=''
 MERCADOPAGO_SECRET=''
+MERCADOPAGO_PAYMENT='sandbox'
 
 # Paypal
 PAYPAL_CLIENTID=''
