--- a/.env
+++ b/.env
@@ -27,6 +27,9 @@ MERCADOPAGO_PAYMENT='sandbox'
 PAYPAL_CLIENTID=''
 PAYPAL_SECRET=''
 
+# Donate
+DONATE_MAX_PARCELAS=3
+
 # Mail
 MAIL_SMTP='smtp://localhost'
 MAIL_WEB='contact@canaryaac.com'
