Resolving Images Outfits Missing
- Remember to download Outfits Package and put inside /resources/images/charactertrade/outfits

--- a/.env
+++ b/.env
@@ -29,3 +29,6 @@ PAYPAL_SECRET=''
 # Mail
 MAIL_SMTP='smtp://localhost'
 MAIL_WEB='contact@canaryaac.com'
+
+# Outfits Folder
+OUTFITS_FOLDER='./resources/images/charactertrade/outfits'
