--- a/.env
+++ b/.env
@@ -30,3 +30,6 @@ PAYPAL_SECRET=''
 # Mail
 MAIL_SMTP='smtp://localhost'
 MAIL_WEB='contact@canaryaac.com'
+
+# Outfits Folder
+OUTFITS_FOLDER='./resources/images/charactertrade/outfits'
